--- a/trunk/07.SourceCode/F5_MoneyPacificSite/F5_MoneyPacificSite/F5_MoneyPacificSite.csproj
+++ b/trunk/07.SourceCode/F5_MoneyPacificSite/F5_MoneyPacificSite/F5_MoneyPacificSite.csproj
@@ -61,8 +61,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\CustomerController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\MenuController.cs" />
     <Compile Include="Controllers\PacificCodeController.cs" />
     <Compile Include="Controllers\StoreController.cs" />
     <Compile Include="Controllers\StoreManagerController.cs" />
@@ -72,6 +74,7 @@
     </Compile>
     <Compile Include="Helpers\HtmlHelpers.cs" />
     <Compile Include="Models\BUS\AgentBUS.cs" />
+    <Compile Include="Models\BUS\AgentStateBUS.cs" />
     <Compile Include="Models\BUS\CollectMoneyBUS.cs" />
     <Compile Include="Models\BUS\CollectStateBUS.cs" />
     <Compile Include="Models\BUS\CustomerBUS.cs" />
@@ -83,6 +86,7 @@
     <Compile Include="Models\BUS\StoreUserBUS.cs" />
     <Compile Include="Models\BUS\TransactionBUS.cs" />
     <Compile Include="Models\DAO\AgentDAO.cs" />
+    <Compile Include="Models\DAO\AgentStateDAO.cs" />
     <Compile Include="Models\DAO\CollectMoneyDAO.cs" />
     <Compile Include="Models\DAO\CollectStateDAO.cs" />
     <Compile Include="Models\DAO\CustomerDAO.cs" />
@@ -101,6 +105,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Utilators\MPMail.cs" />
     <Compile Include="ViewModels\AdminViewModels.cs" />
+    <Compile Include="ViewModels\AgentViewModels.cs" />
     <Compile Include="ViewModels\PacificCodeCheckDetailViewModel.cs" />
     <Compile Include="ViewModels\PacificCodeViewModels.cs" />
     <Compile Include="ViewModels\StoreManagerViewModels.cs" />
@@ -144,14 +149,21 @@
     <Content Include="Views\Admin\Index.aspx" />
     <Content Include="Views\Admin\ListAmount.aspx" />
     <Content Include="Views\Admin\RequestList.aspx" />
+    <Content Include="Views\Agent\Browse.aspx" />
+    <Content Include="Views\Agent\Create.aspx" />
+    <Content Include="Views\Agent\Details.aspx" />
+    <Content Include="Views\Agent\Edit.aspx" />
     <Content Include="Views\Customer\Index.aspx" />
     <Content Include="Views\Home\Index.aspx" />
+    <Content Include="Views\Menu\Index01.aspx" />
+    <Content Include="Views\Menu\Index.aspx" />
     <Content Include="Views\PacificCode\Browse.aspx" />
     <Content Include="Views\PacificCode\ChangeCode.aspx" />
     <Content Include="Views\PacificCode\CheckDetail.aspx" />
     <Content Include="Views\PacificCode\Detail.aspx" />
     <Content Include="Views\PacificCode\SendMoney.aspx" />
     <Content Include="Views\PacificCode\SendSMS.aspx" />
+    <Content Include="Views\Shared\EditorTemplates\Agent.ascx" />
     <Content Include="Views\Shared\EditorTemplates\StoreManagerBaseViewModel.ascx" />
     <Content Include="Views\Shared\EditorTemplates\PacificCodeDetailViewModel.ascx" />
     <Content Include="Views\Shared\EditorTemplates\StoreManager.ascx" />
