--- a/trunk/07.SourceCode/F5_MoneyPacificSite/F5_MoneyPacificSite/F5_MoneyPacificSite.csproj
+++ b/trunk/07.SourceCode/F5_MoneyPacificSite/F5_MoneyPacificSite/F5_MoneyPacificSite.csproj
@@ -140,8 +140,10 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\thickbox.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Scripts\jquery.thickbox.js" />
     <Content Include="Views\Admin\BrowseStoreManager.aspx" />
     <Content Include="Views\Admin\CollectedList.aspx" />
     <Content Include="Views\Admin\CollectProcessing.aspx" />
@@ -150,9 +152,11 @@
     <Content Include="Views\Admin\ListAmount.aspx" />
     <Content Include="Views\Admin\RequestList.aspx" />
     <Content Include="Views\Agent\Browse.aspx" />
-    <Content Include="Views\Agent\Create.aspx" />
+    <Content Include="Views\Agent\Create.ascx" />
+    <Content Include="Views\Agent\Edit.ascx" />
+    <Content Include="Views\Agent\_Create.aspx" />
     <Content Include="Views\Agent\Details.aspx" />
-    <Content Include="Views\Agent\Edit.aspx" />
+    <Content Include="Views\Agent\_Edit.aspx" />
     <Content Include="Views\Customer\Index.aspx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\Menu\Index01.aspx" />
