--- a/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/MoneyPacificSecurity.csproj
+++ b/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/MoneyPacificSecurity.csproj
@@ -44,6 +44,7 @@
     </Reference>
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Security" />
+    <Reference Include="System.ServiceModel" />
     <Reference Include="System.Web.ApplicationServices" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
@@ -60,16 +61,23 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\CustomerBUS.cs" />
+    <Compile Include="BUS\PartPacificCodeBUS.cs" />
+    <Compile Include="BUS\StoreUserBUS.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PacificCodeController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Models\MoneyPacific.Designer.cs">
+    <Compile Include="Helpers\HtmlHelpers.cs" />
+    <Compile Include="MP\BlackBoxService.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service References\WCF_Blackbox\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>MoneyPacific.edmx</DependentUpon>
+      <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModels\PartPacificCodeViewModel.cs" />
     <Compile Include="Views\Shared\Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -105,7 +113,18 @@
     <Content Include="Content\thickbox.css" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <None Include="Service References\WCF_Blackbox\BlackBoxService.disco" />
+    <None Include="Service References\WCF_Blackbox\configuration91.svcinfo" />
+    <None Include="Service References\WCF_Blackbox\configuration.svcinfo" />
+    <None Include="Service References\WCF_Blackbox\MoneyPacificSite.WCF_Blackbox.PacificCodeViewModel.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\WCF_Blackbox\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
     <Content Include="Views\Home\Index.aspx" />
+    <Content Include="Views\PacificCode\Browse.aspx" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
@@ -127,15 +146,38 @@
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Web.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\MPDataAccess\MPDataAccess.csproj">
+      <Project>{9E132A3D-4F8D-43B9-91C4-2733D046B8CD}</Project>
+      <Name>MPDataAccess</Name>
+    </ProjectReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Site.Master" />
   </ItemGroup>
   <ItemGroup>
-    <EntityDeploy Include="Models\MoneyPacific.edmx">
-      <Generator>EntityModelCodeGenerator</Generator>
-      <LastGenOutput>MoneyPacific.Designer.cs</LastGenOutput>
-    </EntityDeploy>
+    <Folder Include="Models\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadataStorage Include="Service References\WCF_Blackbox\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\WCF_Blackbox\BlackBoxService.wsdl" />
+    <None Include="Service References\WCF_Blackbox\BlackBoxService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\WCF_Blackbox\BlackBoxService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\WCF_Blackbox\BlackBoxService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\WCF_Blackbox\BlackBoxService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
