--- a/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/web.config
+++ b/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/web.config
@@ -97,4 +97,71 @@
 			</dependentAssembly>
 		</assemblyBinding>
 	</runtime>
+  
+ <system.serviceModel>
+   
+  <!--<bindings>
+   <wsHttpBinding>
+    <binding name="WSHttpBinding_IBlackBoxService" closeTimeout="00:01:00"
+     openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00"
+     bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard"
+     maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text"
+     textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+     <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384"
+      maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+     <reliableSession ordered="true" inactivityTimeout="00:10:00"
+      enabled="false" />
+     <security mode="Message">
+      <transport clientCredentialType="Windows" proxyCredentialType="None"
+       realm="" />
+      <message clientCredentialType="Windows" negotiateServiceCredential="true"
+       algorithmSuite="Default" />
+     </security>
+    </binding>
+   </wsHttpBinding>
+  </bindings>
+  
+   <client>
+   <endpoint address="http://localhost:2010/BlackBoxService.svc"
+    binding="wsHttpBinding" bindingConfiguration="WSHttpBinding_IBlackBoxService"
+    contract="WCF_Blackbox.IBlackBoxService" name="WSHttpBinding_IBlackBoxService">
+    <identity>
+     <dns value="localhost" />
+    </identity>
+   </endpoint>
+  </client>-->
+   
+   <bindings>
+     <wsHttpBinding>
+       <binding name="WSHttpBinding_IBlackBoxService" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" bypassProxyOnLocal="false" transactionFlow="false" hostNameComparisonMode="StrongWildcard" maxBufferPoolSize="524288" maxReceivedMessageSize="65536" messageEncoding="Text" textEncoding="utf-8" useDefaultWebProxy="true" allowCookies="false">
+         <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
+         <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
+         <security mode="Message">
+           <transport clientCredentialType="Windows" proxyCredentialType="None" realm="">
+             <extendedProtectionPolicy policyEnforcement="Never"/>
+           </transport>
+           <message clientCredentialType="Windows" negotiateServiceCredential="true" algorithmSuite="Default" establishSecurityContext="true"/>
+         </security>
+       </binding>
+     </wsHttpBinding>
+   </bindings>
+   <client>
+     <!-- link localhost nay dung de test  -->
+
+     <!--<endpoint address="http://localhost:2010/BlackBoxService.svc"
+                binding="wsHttpBinding"
+                bindingConfiguration="WSHttpBinding_IBlackBoxService"
+                contract="IBlackBoxService"
+                name="WSHttpBinding_IBlackBoxService">-->
+     <endpoint address="http://moneypacific.dev:3000/BlackBoxService.svc"
+               binding="wsHttpBinding"
+               bindingConfiguration="WSHttpBinding_IBlackBoxService"
+               contract="IBlackBoxService"
+               name="WSHttpBinding_IBlackBoxService">
+       <identity>
+         <dns value="localhost"/>
+       </identity>
+     </endpoint>
+   </client>
+ </system.serviceModel>
 </configuration>
