--- a/07.SourceCode/F7_MoneyPacificSite/MPDataAccess/MPDataAccess.csproj
+++ b/07.SourceCode/F7_MoneyPacificSite/MPDataAccess/MPDataAccess.csproj
@@ -43,12 +43,14 @@
   <ItemGroup>
     <Compile Include="AgentDAO.cs" />
     <Compile Include="AgentStateDAO.cs" />
+    <Compile Include="AreaDAO.cs" />
     <Compile Include="CategoryDAO.cs" />
     <Compile Include="CollectionDAO.cs" />
     <Compile Include="CollectionStateDAO.cs" />
     <Compile Include="CustomerDAO.cs" />
     <Compile Include="CustomerStateDAO.cs" />
     <Compile Include="DataAccessLayer.cs" />
+    <Compile Include="DTO\Agent.cs" />
     <Compile Include="MoneyPacific.designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
