--- a/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/MoneyPacificSecurity.csproj
+++ b/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/MoneyPacificSecurity.csproj
@@ -61,12 +61,24 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BUS\AgentBUS.cs" />
+    <Compile Include="BUS\AgentStateBUS.cs" />
+    <Compile Include="BUS\AreaBUS.cs" />
     <Compile Include="BUS\CustomerBUS.cs" />
     <Compile Include="BUS\PartPacificCodeBUS.cs" />
+    <Compile Include="BUS\StoreManagerBUS.cs" />
+    <Compile Include="BUS\StoreManagerStateBUS.cs" />
     <Compile Include="BUS\StoreUserBUS.cs" />
+    <Compile Include="BUS\StoreUserStateBUS.cs" />
     <Compile Include="BUS\TransactionBUS.cs" />
+    <Compile Include="BUS\UserBUS.cs" />
+    <Compile Include="Controllers\AdminController.cs" />
+    <Compile Include="Controllers\AgentController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\PacificCodeController.cs" />
+    <Compile Include="Controllers\StoreManagerController.cs" />
+    <Compile Include="Controllers\StoreUserController.cs" />
+    <Compile Include="Controllers\TestController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -80,9 +92,14 @@
       <DependentUpon>Reference.svcmap</DependentUpon>
     </Compile>
     <Compile Include="Util\Utilator.cs" />
+    <Compile Include="ViewModels\AdminViewModels.cs" />
+    <Compile Include="ViewModels\AgentViewModels.cs" />
     <Compile Include="ViewModels\PacificCodeCheckDetailsViewModel.cs" />
     <Compile Include="ViewModels\PacificCodeViewModels.cs" />
     <Compile Include="ViewModels\PartPacificCodeViewModel.cs" />
+    <Compile Include="ViewModels\SecurityViewModel.cs" />
+    <Compile Include="ViewModels\StoreManagerViewModels.cs" />
+    <Compile Include="ViewModels\StoreUserViewModels.cs" />
     <Compile Include="Views\Shared\Site.Master.cs">
       <DependentUpon>Site.Master</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -128,13 +145,33 @@
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
+    <Content Include="Scripts\jquery.thickbox.js" />
+    <Content Include="Views\Admin\BrowseStoreManager.aspx" />
+    <Content Include="Views\Admin\CollectedList.aspx" />
+    <Content Include="Views\Admin\CollectProcessing.aspx" />
+    <Content Include="Views\Admin\EditStoreManager.aspx" />
+    <Content Include="Views\Admin\ListAmount.aspx" />
+    <Content Include="Views\Admin\RequestList.aspx" />
+    <Content Include="Views\Agent\Browse.aspx" />
+    <Content Include="Views\Agent\Create.aspx" />
+    <Content Include="Views\Agent\Delete.aspx" />
+    <Content Include="Views\Agent\Details.aspx" />
+    <Content Include="Views\Agent\Edit.aspx" />
     <Content Include="Views\Home\Index.aspx" />
     <Content Include="Views\PacificCode\Browse.aspx" />
     <Content Include="Views\PacificCode\CheckDetail.aspx" />
     <Content Include="Views\PacificCode\Detail.aspx" />
     <Content Include="Views\PacificCode\SendMoney.aspx" />
     <Content Include="Views\PacificCode\SendSMS.aspx" />
-    <Content Include="Web.config" />
+    <Content Include="Views\StoreManager\AskToBePartner.aspx" />
+    <Content Include="Views\StoreManager\Dashboard.aspx" />
+    <Content Include="Views\StoreManager\Information.aspx" />
+    <Content Include="Views\StoreManager\Security.aspx" />
+    <Content Include="Views\StoreUser\DashBoard.aspx" />
+    <Content Include="Views\Test\Index.aspx" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </Content>
@@ -154,12 +191,7 @@
     <Content Include="Scripts\MicrosoftMvcValidation.js" />
     <Content Include="Scripts\MicrosoftMvcValidation.debug.js" />
     <Content Include="Views\Web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MPDataAccess\MPDataAccess.csproj">
-      <Project>{9E132A3D-4F8D-43B9-91C4-2733D046B8CD}</Project>
-      <Name>MPDataAccess</Name>
-    </ProjectReference>
+    <Content Include="Views\Shared\View.Master" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\Shared\Site.Master" />
@@ -187,6 +219,12 @@
     <None Include="Service References\WCF_Blackbox\BlackBoxService3.xsd">
       <SubType>Designer</SubType>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MPDataAccess\MPDataAccess.csproj">
+      <Project>{9E132A3D-4F8D-43B9-91C4-2733D046B8CD}</Project>
+      <Name>MPDataAccess</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" />
