--- a/trunk/07.SourceCode/F7_MoneyPacificSite/MPDataAccess/Properties/Settings.settings
+++ b/trunk/07.SourceCode/F7_MoneyPacificSite/MPDataAccess/Properties/Settings.settings
@@ -10,5 +10,13 @@
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
       <Value Profile="(Default)">Data Source=alex-pc;Initial Catalog=moneypacific_security;Integrated Security=True</Value>
     </Setting>
+    <Setting Name="moneypacific_security_finalConnectionString" Type="(Connection string)" Scope="Application">
+      <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
+&lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
+  &lt;ConnectionString&gt;Data Source=ALEX-PC;Initial Catalog=moneypacific_security_final;Persist Security Info=True;User ID=sa;Password=admin&lt;/ConnectionString&gt;
+  &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
+&lt;/SerializableConnectionString&gt;</DesignTimeValue>
+      <Value Profile="(Default)">Data Source=ALEX-PC;Initial Catalog=moneypacific_security_final;Persist Security Info=True;User ID=sa;Password=admin</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
