--- a/trunk/07.SourceCode/F7_MoneyPacificSite/MPDataAccess/app.config
+++ b/trunk/07.SourceCode/F7_MoneyPacificSite/MPDataAccess/app.config
@@ -3,6 +3,11 @@
     <configSections>
     </configSections>
     <connectionStrings>
-        <add name="MPDataAccess.Properties.Settings.moneypacific_securityConnectionString" connectionString="Data Source=alex-pc;Initial Catalog=moneypacific_security;Integrated Security=True" providerName="System.Data.SqlClient"/>
+        <add name="MPDataAccess.Properties.Settings.moneypacific_securityConnectionString"
+            connectionString="Data Source=alex-pc;Initial Catalog=moneypacific_security;Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+        <add name="MPDataAccess.Properties.Settings.moneypacific_security_finalConnectionString"
+            connectionString="Data Source=ALEX-PC;Initial Catalog=moneypacific_security_final;Persist Security Info=True;User ID=sa;Password=admin"
+            providerName="System.Data.SqlClient" />
     </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
