--- a/trunk/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/MoneyPacificSecurity.csproj
+++ b/trunk/07.SourceCode/F7_MoneyPacificSite/MoneyPacificSecurity/MoneyPacificSecurity.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Util\Utilator.cs" />
     <Compile Include="ViewModels\AdminViewModels.cs" />
     <Compile Include="ViewModels\AgentViewModels.cs" />
+    <Compile Include="ViewModels\CollectionViewModels.cs" />
     <Compile Include="ViewModels\PacificCodeCheckDetailsViewModel.cs" />
     <Compile Include="ViewModels\PacificCodeViewModels.cs" />
     <Compile Include="ViewModels\PartPacificCodeViewModel.cs" />
