--- a/trunk/07.SourceCode/TongHop/MoneyPacificBlackBox/Web.config
+++ b/trunk/07.SourceCode/TongHop/MoneyPacificBlackBox/Web.config
@@ -2,8 +2,9 @@
 <configuration>
 	<appSettings/>
 	<connectionStrings>
-  <add name="moneypacific_blackboxConnectionString" connectionString="Data Source=alex-pc;Initial Catalog=moneypacific_blackbox;Persist Security Info=True;User ID=sa;Password=admin"
-   providerName="System.Data.SqlClient" />
+  <add name="moneypacific_blackboxConnectionString" 
+       connectionString="Data Source=alex-pc;Initial Catalog=moneypacific_blackbox;Persist Security Info=True;User ID=sa;Password=admin"
+       providerName="System.Data.SqlClient" />
  </connectionStrings>
 	<system.web>
 		<compilation debug="true" targetFramework="4.0">
